--- a/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
@@ -100,14 +100,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InProcessMSTestTestsExecutor.cs" />
     <Compile Include="Models\MSTestExectionResult.cs" />
     <Compile Include="Models\MSTestExectionWithCodeCoverageResult.cs" />
     <Compile Include="Models\MSTestTestcase.cs" />
     <Compile Include="Models\MSTestTestResult.cs" />
     <Compile Include="MSTestConstants.cs" />
-    <Compile Include="ConsoleMSTestTestsDiscoverer.cs" />
-    <Compile Include="MSTestTestsExecutor.cs" />
-    <Compile Include="MSTestTestsExecutorWithOpenCoverage.cs" />
+    <Compile Include="MonoMSTestTestsDiscoverer.cs" />
+    <Compile Include="ConsoleMSTestTestsExecutor.cs" />
+    <Compile Include="ConsoleMSTestTestsExecutorWithOpenCoverage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\MSTestExecutionResultParameters.cs" />
     <Compile Include="Adapters\OpenCoverXmlCoverageAdapter.cs" />
@@ -116,6 +117,8 @@
     <Compile Include="InProcessMSTestTestsDiscoverer.cs" />
     <Compile Include="VsTest\AsyncAutoResetEvent.cs" />
     <Compile Include="VsTest\DiscoveryEventHandler.cs" />
+    <Compile Include="VsTest\InProcessVsTestConnector.cs" />
+    <Compile Include="VsTest\RunEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Concrete.RTS\RTSFramework.RTSApproaches.Dynamic.csproj">
