--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -84,9 +84,10 @@
     <Compile Include="Models\GranularityLevel.cs" />
     <Compile Include="Models\CompositeTestCaseResult.cs" />
     <Compile Include="Models\IProgramModelElement.cs" />
-    <Compile Include="Models\ITestCaseResult.cs" />
+    <Compile Include="Models\TestExecution\ITestCaseResult.cs" />
     <Compile Include="Models\Delta\StructuralDelta.cs" />
-    <Compile Include="Models\TestExecutionOutcome.cs" />
+    <Compile Include="Models\TestExecution\TestCaseResultEventArgs.cs" />
+    <Compile Include="Models\TestExecution\TestExecutionOutcome.cs" />
     <Compile Include="DeltaDiscoverer\IOfflineDeltaDiscoverer.cs" />
     <Compile Include="Models\IProgramModel.cs" />
     <Compile Include="Models\ITestCase.cs" />
