--- a/RTSFramework/RTSFramework.RTSApproaches.ClassSRTS/RTSFramework.RTSApproaches.Static.csproj
+++ b/RTSFramework/RTSFramework.RTSApproaches.ClassSRTS/RTSFramework.RTSApproaches.Static.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ClassSRTSDeltaExpander.cs" />
     <Compile Include="MonoIntertypeRelationGraphBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeDefinitionExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Concrete.CSharp.MSTest\RTSFramework.Concrete.CSharp.MSTest.csproj">
