Simple error message and stack trace window

--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -258,6 +258,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Behaviors\HandleDoubleClickBehavior.cs" />
     <Compile Include="Converters\CommitComboboxItemConverter.cs" />
     <Compile Include="Converters\DateTimeWithTimeConverter.cs" />
     <Compile Include="Converters\InverseBooleanConverter.cs" />
