First step toward own instrumenting during test execution - instrumenting test method start

--- a/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
@@ -109,6 +109,7 @@
     <Compile Include="MonoMSTestTestsDiscoverer.cs" />
     <Compile Include="ConsoleMSTestTestsExecutor.cs" />
     <Compile Include="ConsoleMSTestTestsExecutorWithOpenCoverage.cs" />
+    <Compile Include="MSTestExecutorWithInstrumenting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\MSTestExecutionResultParameters.cs" />
     <Compile Include="Adapters\OpenCoverXmlCoverageAdapter.cs" />
@@ -122,6 +123,10 @@
     <Compile Include="VsTest\VsTestResultEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RTSFramework.Concrete.CSharp.DependencyMonitor\RTSFramework.Concrete.CSharp.DependencyMonitor.csproj">
+      <Project>{525c28a4-e224-4d9c-9096-08a3fdb06b45}</Project>
+      <Name>RTSFramework.Concrete.CSharp.DependencyMonitor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Concrete.RTS\RTSFramework.RTSApproaches.Dynamic.csproj">
       <Project>{748E5AC2-68C2-4B3F-9350-A02726C932A9}</Project>
       <Name>RTSFramework.RTSApproaches.Dynamic</Name>
