--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Adapter\CancelableArtefactAdapter.cs" />
     <Compile Include="ICSharpProgramArtefact.cs" />
     <Compile Include="Adapter\IArtefactAdapter.cs" />
+    <Compile Include="ITestExecutionResult.cs" />
+    <Compile Include="ITestExecutor.cs" />
+    <Compile Include="ITestInstrumentor.cs" />
     <Compile Include="ITestProcessingResult.cs" />
     <Compile Include="Models\CoverageData.cs" />
     <Compile Include="Models\CoverageDataEntry.cs" />
