Application settings introduced

--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Adapter\CancelableArtefactAdapter.cs" />
     <Compile Include="ICSharpProgramArtefact.cs" />
     <Compile Include="Adapter\IArtefactAdapter.cs" />
+    <Compile Include="Utilities\ILoggingHelper.cs" />
+    <Compile Include="ISettingsProvider.cs" />
     <Compile Include="ITestExecutionResult.cs" />
     <Compile Include="ITestExecutor.cs" />
     <Compile Include="ITestInstrumentor.cs" />
