--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -125,6 +125,7 @@
       <HintPath>..\packages\System.Composition.TypedParts.1.0.31\lib\portable-net45+win8+wp8+wpa81\System.Composition.TypedParts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Console, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
       <Private>True</Private>
@@ -273,6 +274,7 @@
     </Compile>
     <Compile Include="RequireUIServices\ApplicationUiExecutor.cs" />
     <Compile Include="RequireUIServices\DialogService.cs" />
+    <Compile Include="SettingsProvider.cs" />
     <Compile Include="Utilities\EnumBindingSourceExtension.cs" />
     <Page Include="IntendedChangesDialog.xaml">
       <SubType>Designer</SubType>
