Disabled file granularity level

--- a/RTSFramework/RTSFramework.GUI/App.config
+++ b/RTSFramework/RTSFramework.GUI/App.config
@@ -56,7 +56,7 @@
 		<!-- Note that it is "AnyCPU" and not "Any CPU" as displayed in Visual Studio-->
 		<add key="platform" value="AnyCPU"/>
 		<add key="testAssembliesFilter" value="Test.dll"/>
-		<add key="cleanupTestResultsDirectory" value="true"/>
+		<add key="cleanupTestResultsDirectory" value="false"/>
 		<add key="logToFile" value="true"/>
 	</appSettings>
 </configuration>
