--- a/RTSFramework/RTSFramework.GUI/App.config
+++ b/RTSFramework/RTSFramework.GUI/App.config
@@ -58,5 +58,7 @@
 		<add key="testAssembliesFilter" value="Test.dll"/>
 		<add key="cleanupTestResultsDirectory" value="false"/>
 		<add key="logToFile" value="true"/>
+		<!-- Pathes relative to dll that is loaded - multiple split by semicolon-->
+		<add key="additionalReferences" value ="..\..\Lib;"/>
 	</appSettings>
 </configuration>
