--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -275,6 +275,7 @@
     <Compile Include="RequireUIServices\ApplicationUiExecutor.cs" />
     <Compile Include="RequireUIServices\DialogService.cs" />
     <Compile Include="SettingsProvider.cs" />
+    <Compile Include="Utilities\ApplicationClosedHandler.cs" />
     <Compile Include="Utilities\EnumBindingSourceExtension.cs" />
     <Page Include="IntendedChangesDialog.xaml">
       <SubType>Designer</SubType>
