--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -77,12 +77,13 @@
     <Compile Include="Adapter\CancelableArtefactAdapter.cs" />
     <Compile Include="ICSharpProgramArtefact.cs" />
     <Compile Include="Adapter\IArtefactAdapter.cs" />
+    <Compile Include="ITestsPrioritizer.cs" />
     <Compile Include="Utilities\IApplicationClosedHandler.cs" />
     <Compile Include="Utilities\ILoggingHelper.cs" />
     <Compile Include="Utilities\ISettingsProvider.cs" />
-    <Compile Include="ITestExecutionResult.cs" />
-    <Compile Include="ITestExecutor.cs" />
-    <Compile Include="ITestInstrumentor.cs" />
+    <Compile Include="ITestsExecutionResult.cs" />
+    <Compile Include="ITestsExecutor.cs" />
+    <Compile Include="ITestsInstrumentor.cs" />
     <Compile Include="ITestProcessingResult.cs" />
     <Compile Include="Models\CoverageData.cs" />
     <Compile Include="Models\Delta\IDelta.cs" />
@@ -97,7 +98,7 @@
     <Compile Include="Models\IProgramModel.cs" />
     <Compile Include="Models\ITestCase.cs" />
     <Compile Include="ITestsDiscoverer.cs" />
-    <Compile Include="ITestProcessor.cs" />
+    <Compile Include="ITestsProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\EnumDescriptionTypeConverter.cs" />
   </ItemGroup>
