--- a/RTSFramework/RTSFramework.Concrete.User/RTSFramework.Concrete.User.csproj
+++ b/RTSFramework/RTSFramework.Concrete.User/RTSFramework.Concrete.User.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IIntendedChangesProvider.cs" />
+    <Compile Include="IntendedChangesAdapter.cs" />
+    <Compile Include="IntendedChangesArtefact.cs" />
     <Compile Include="IntendedFileChangesProvider.cs" />
+    <Compile Include="Models\LocalProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserIntendedChangesDiscoverer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Concrete.TFS2010\RTSFramework.Concrete.TFS2010.csproj">
