--- a/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
+++ b/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
@@ -90,6 +90,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommitViewModel.cs" />
+    <Compile Include="Controller\DeltaBasedController.cs" />
+    <Compile Include="Controller\IController.cs" />
     <Compile Include="IntendedChangesDialogViewModel.cs" />
     <Compile Include="RequireUIServices\IApplicationUiExecutor.cs" />
     <Compile Include="RunConfigurations\DiscoveryType.cs" />
@@ -98,7 +100,6 @@
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunConfigurations\ProcessingType.cs" />
-    <Compile Include="RunConfigurations\ProgramModelType.cs" />
     <Compile Include="RunConfigurations\RTSApproachType.cs" />
     <Compile Include="TestResultListViewItemViewModel.cs" />
     <Compile Include="UnityModelInitializer.cs" />
