--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -102,6 +102,7 @@
     <Compile Include="ITestsProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\EnumDescriptionTypeConverter.cs" />
+    <Compile Include="Utilities\IUserRunConfigurationProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
