Artefact Adapter in the end converting internal result to user result

--- a/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
@@ -41,9 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvFileArtefact.cs" />
     <Compile Include="FileProcessingResult.cs" />
-    <Compile Include="IdentifiedTestsListReporter.cs" />
-    <Compile Include="CsvTestsReporter.cs" />
+    <Compile Include="TestsReporter.cs" />
+    <Compile Include="TestsCsvFileAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestListResult.cs" />
   </ItemGroup>
