--- a/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
+++ b/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.6.3.0\lib\net45\Prism.dll</HintPath>
       <Private>True</Private>
@@ -90,6 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapter\JsonFileUserSettingsAdapter.cs" />
     <Compile Include="Adapter\TestsResultListViewItemViewModelsAdapter.cs" />
     <Compile Include="Adapter\TestResultListViewItemViewModelAdapter.cs" />
     <Compile Include="CommitViewModel.cs" />
@@ -98,10 +103,11 @@
     <Compile Include="IntendedChangesDialogViewModel.cs" />
     <Compile Include="RequireUIServices\IApplicationUiExecutor.cs" />
     <Compile Include="RunConfigurations\DiscoveryType.cs" />
-    <Compile Include="RunConfigurations\IUserSettingsProvider.cs" />
     <Compile Include="RunConfigurations\ProgramModelType.cs" />
     <Compile Include="RunConfigurations\ResultArtefactType.cs" />
     <Compile Include="RunConfigurations\TestType.cs" />
+    <Compile Include="RunConfigurations\UserSettings.cs" />
+    <Compile Include="RunConfigurations\UserSettingsProvider.cs" />
     <Compile Include="RunStatus.cs" />
     <Compile Include="Controller\StateBasedController.cs" />
     <Compile Include="MainWindowViewModel.cs" />
