--- a/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Reporting/RTSFramework.Concrete.Reporting.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="CsvFileArtefact.cs" />
     <Compile Include="FileProcessingResult.cs" />
-    <Compile Include="TestsReporter.cs" />
+    <Compile Include="TestReporter.cs" />
     <Compile Include="TestsCsvFileAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestListResult.cs" />
