--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -77,12 +77,12 @@
     <Compile Include="ChainingDeltaAdapter.cs" />
     <Compile Include="EmptyArtefactAdapter.cs" />
     <Compile Include="IdentityDeltaAdapter.cs" />
-    <Compile Include="LimitedTimeTestsExecutor.cs" />
+    <Compile Include="LimitedTimeTestExecutor.cs" />
     <Compile Include="Models\FileElement.cs" />
     <Compile Include="NoOpPrioritizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminationConditionReachedException.cs" />
-    <Compile Include="TestsExecutorWithTerminationCondition.cs" />
+    <Compile Include="TestExecutorWithTerminationCondition.cs" />
     <Compile Include="Utilities\LoggingHelper.cs" />
     <Compile Include="Utilities\ProcessExtensions.cs" />
     <Compile Include="Utilities\RelativePathHelper.cs" />
