Missing project file

--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -82,10 +82,10 @@
   <ItemGroup>
     <Compile Include="GitCommitsProvider.cs" />
     <Compile Include="Models\GitCommit.cs" />
-    <Compile Include="Models\GitProgramModel.cs" />
+    <Compile Include="Models\GitCSharpProgramModel.cs" />
     <Compile Include="Models\GitVersionIdentification.cs" />
     <Compile Include="Models\GitVersionReferenceType.cs" />
-    <Compile Include="GitProgramModelAdapter.cs" />
+    <Compile Include="GitCSharpProgramModelAdapter.cs" />
     <Compile Include="GitFileDeltaDiscoverer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
