--- a/RTSFramework/RTSFramework.GUI/packages.config
+++ b/RTSFramework/RTSFramework.GUI/packages.config
@@ -13,6 +13,9 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.7.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.7.0" targetFramework="net461" />
+  <package id="Microsoft.Msagl" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Msagl.Drawing" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Msagl.GraphViewerGDI" version="1.0.2" targetFramework="net461" />
   <package id="Microsoft.TestPlatform" version="15.7.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Prism.Core" version="7.0.0.396" targetFramework="net461" />
